--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "cors": "^2.8.5",
         "exceljs": "^4.4.0",
         "express": "^4.18.3",
+        "netlify-cli": "^12.7.2",
+        "netlify-lambda": "^2.0.15",
+        "serveless-http": "^2.7.0",
         "express-session": "^1.18.0",
         "express-validator": "^7.0.1",
         "googleapis": "^130.0.0",
