--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "express": "^4.18.3",
         "netlify-cli": "^12.7.2",
         "netlify-lambda": "^2.0.15",
-        "serveless-http": "^2.7.0",
+        "serverless-http": "^2.7.0",
         "express-session": "^1.18.0",
         "express-validator": "^7.0.1",
         "googleapis": "^130.0.0",
